product_ui_card_add

--- a/03_project/img_shadow_box.html
+++ b/03_project/img_shadow_box.html
@@ -18,5 +18,11 @@
 
 <p class="css_column">Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Dicta repellendus, voluptas atque eum, dolores ratione soluta perspiciatis! Vero voluptas veniam, fuga modi alias placeat obcaecati deleniti deserunt quia, labore corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quia, perspiciatis fuga iusto esse tempore voluptatibus? Fugiat quos obcaecati deserunt adipisci delectus quia quod nisi molestiae temporibus nostrum. Repellat, ipsa! lorem</p>
 
+<div class="first_img"></div><br><hr>
+<div class="second_img"></div><br><hr>
+<div class="third_img"></div><br><hr>	
+<div class="fourth_img">Wild Life .......</div><br><hr>
+<div class="fifth_img"></div><br><hr>
+
 </body>
 </html>
