--- a/01_animation_card/index.html
+++ b/01_animation_card/index.html
@@ -17,6 +17,14 @@
 		<span style="--i:6"><img src="img/5.jpg" alt=""></span>
 		<span style="--i:7"><img src="img/7.jpg" alt=""></span>
 		<span style="--i:8"><img src="img/4.jpg" alt=""></span>
+		<span style="--i:9"><img src="img/11.jpg" alt=""></span>
+		<span style="--i:10"><img src="img/12.jpg" alt=""></span>
+		<span style="--i:11"><img src="img/13.jpg" alt=""></span>
+		<span style="--i:12"><img src="img/14.jpg" alt=""></span>
+		<span style="--i:13"><img src="img/15.jpg" alt=""></span>
+		<span style="--i:14"><img src="img/16.jpg" alt=""></span>
+		<span style="--i:15"><img src="img/17.jpg" alt=""></span>
+		<span style="--i:16"><img src="img/18.jpg" alt=""></span>
 	</div>
 </body>
 </html>
