--- a/01_html_form/02_html_form.html
+++ b/01_html_form/02_html_form.html
@@ -9,7 +9,7 @@
 	<form action="">
 		<div class="form-group">
 			<label for="Name">Name</label>
-			<input type="text" >
+			<input type="text" min="1" max="5">
 		</div>
 		<div class="form-group">
 			<label for="Name">Email</label>
@@ -26,6 +26,33 @@
 		<div class="btn">
 			<button>Upload</button>
 		</div>
+		<input type="text" max="5">
+		<input type="radio">
+		<input type="radio">
+		<input type="checkbox">
+		<input type="password" name="">
+		<input type="number">
+		<input type="email">
+		<input type="file">
+		<input type="textarea">
+		<textarea name="" id="" cols="30" rows="10"></textarea>
+		<input type="date">
+		<br>
+		<input type="datetime-local">
+		<br>
+		<input type="month">
+		<br>
+		<input type="range">
+		<br>
+		<input type="reset">
+		<br>
+		<input type="search">
+		<br>
+		<input type="tel">
+		<input type="submit">
+		<input type="button" value="Upload">
+		<br>
+		<input type="week">
 	</form>
 </body>
 </html>
